--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,7 +1,21 @@
 #map{
-    height: 500px;
+    height: 550px;
+}
+
+nav{
+    height: 110px;
+}
+
+a{
+    margin-left: -9%;
+    color: rgb(26, 102, 3);
 }
 
 form{
-    margin-bottom: 50px;
+    width: 70%;
+}
+
+container{
+    display: flex;
+    flex-wrap: wrap;
 }
